--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
 
         let btn = document.querySelector('#btn')
 
-        console.log(btn)
-
         btn.onclick = function () {
-            let Tip = tip(+new Date)
+            tip('你好啊')
         }
 
         tip(123)
