--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,6 @@
             tip({
                 content: '向上边离开',
                 direction: 'top',
-                duration: 5000,
             })
         }
         btnRight.onclick = function () {
@@ -79,7 +78,8 @@
         // 第二行
         btnLine.onclick = function () {
             tip({
-                content: '默认是单行'
+                content: '默认是单行',
+                duration: 1000
             })
         }
         btnMultile.onclick = function () {
@@ -116,9 +116,9 @@
         btnLoading1.onclick = function () {
             var loading = tip('<img src="./svg-loaders/puff.svg" width="60" alt="">')
             // 模拟任务执行完毕
-            // setTimeout(function () {
-            //     loading.close()
-            // }, 3000)
+            setTimeout(function () {
+                loading.close()
+            }, 3000)
         }
         btnLoading2.onclick = function () {
             tip('<img src="./svg-loaders/puff.svg" width="60" alt="">')
