'修改引用位置'

--- a/example/index.html
+++ b/example/index.html
@@ -129,5 +129,5 @@
         }
 
     </script>
-<script type="text/javascript" src="../release/layout.js"></script></body>
+<script type="text/javascript" src="js/layout.js"></script></body>
 </html>
